--- a/index.html
+++ b/index.html
@@ -1,29 +1,206 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Site Simple</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f5f5f5;
-        }
+<meta charset="UTF-8">
+<title>Ultimate Fancy Gift List</title>
 
-        h1 {
-            color: #333333;
-        }
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-        p {
-            color: #666666;
-            font-size: 18px;
-        }
-    </style>
+<!-- Animate.css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+<!-- Hover.css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.2/css/hover-min.css"/>
+
+<!-- FancyInput.css -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jamesbarnett/fancyinput/fancyInput.css"/>
+
+<!-- Effeckt.css -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/h5bp/Effeckt.css/dist/effeckt.min.css"/>
+
+<style>
+  /* Global Styles */
+  body {
+    font-family: 'Roboto', sans-serif;
+    background: radial-gradient(circle at top left, #ffdde1, #ee9ca7, #ffb347);
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 20px;
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 4em;
+    color: #fff;
+    text-shadow: 0 0 10px #ff6f91, 0 0 20px #ff6f91, 0 0 30px #ff6f91;
+    margin-bottom: 50px;
+    animation: glow 2s infinite alternate;
+  }
+
+  @keyframes glow {
+    0% { text-shadow: 0 0 10px #ff6f91, 0 0 20px #ff6f91, 0 0 30px #ff6f91; }
+    100% { text-shadow: 0 0 20px #ff9f1c, 0 0 30px #ff9f1c, 0 0 40px #ff9f1c; }
+  }
+
+  .gift-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 600px;
+  }
+
+  .input-wrapper {
+    width: 100%;
+    margin-bottom: 30px;
+    display: flex;
+    gap: 10px;
+  }
+
+  .fancyInput {
+    width: 100%;
+    font-size: 1.2em;
+    color: #333;
+  }
+
+  button.add-btn {
+    background: linear-gradient(45deg, #ff6f91, #ff9f1c);
+    border: none;
+    padding: 12px 25px;
+    border-radius: 30px;
+    color: #fff;
+    font-size: 1.1em;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: all 0.3s ease;
+  }
+
+  button.add-btn:hover {
+    transform: scale(1.1) rotate(-3deg);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    width: 100%;
+  }
+
+  li {
+    background: rgba(255, 255, 255, 0.85);
+    margin: 12px 0;
+    padding: 18px 25px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2em;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  li:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 15px 25px rgba(0,0,0,0.3);
+  }
+
+  li button {
+    background: linear-gradient(45deg, #ff6f91, #ff9f1c);
+    border: none;
+    padding: 8px 15px;
+    border-radius: 12px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+
+  li button:hover {
+    transform: scale(1.2) rotate(-5deg);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+  }
+
+  /* Particle effects */
+  .particle {
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: linear-gradient(45deg, #ff6f91, #ff9f1c);
+    border-radius: 50%;
+    pointer-events: none;
+    animation: particleMove 1s forwards;
+  }
+
+  @keyframes particleMove {
+    0% { opacity: 1; transform: translate(0,0) scale(1);}
+    100% { opacity: 0; transform: translate(var(--dx), var(--dy)) scale(0);}
+  }
+
+</style>
 </head>
-<body>
-    <h1>Bienvenue sur mon site</h1>
-    <p>Ceci est un paragraphe simple affiché sur un site minimaliste.</p>
+<body class="effeckt-scale-up">
+
+<h1 class="animate__animated animate__pulse animate__infinite">🎁 Ultimate Fancy Gift List 🎁</h1>
+
+<div class="gift-container">
+  <div class="input-wrapper">
+    <input type="text" id="newGift" class="fancyInput" placeholder="Add a gift..." />
+    <button class="add-btn hvr-pulse-grow" onclick="addGift()">Add</button>
+  </div>
+
+  <ul id="giftList">
+    <li class="animate__animated animate__fadeInUp">Chocolate <button onclick="thanosSnap(this)">X</button></li>
+    <li class="animate__animated animate__fadeInUp">Book <button onclick="thanosSnap(this)">X</button></li>
+    <li class="animate__animated animate__fadeInUp">Game <button onclick="thanosSnap(this)">X</button></li>
+  </ul>
+</div>
+
+<script src="https://cdn.jsdelivr.net/gh/jamesbarnett/fancyinput/fancyInput.js"></script>
+<script>
+  FancyInput.setup();
+
+  function addGift() {
+    const input = document.getElementById('newGift');
+    const value = input.value.trim();
+    if (!value) return;
+
+    const li = document.createElement('li');
+    li.className = 'animate__animated animate__fadeInUp';
+    li.innerHTML = value + ' <button onclick="thanosSnap(this)">X</button>';
+    document.getElementById('giftList').appendChild(li);
+    input.value = '';
+  }
+
+  function thanosSnap(button) {
+    const li = button.parentElement;
+    const particles = [];
+
+    for (let i = 0; i < 80; i++) {
+      const particle = document.createElement('div');
+      particle.className = 'particle';
+      particle.style.left = Math.random() * li.offsetWidth + 'px';
+      particle.style.top = Math.random() * li.offsetHeight + 'px';
+      const dx = (Math.random() - 0.5) * 400 + 'px';
+      const dy = (Math.random() - 0.5) * 400 + 'px';
+      particle.style.setProperty('--dx', dx);
+      particle.style.setProperty('--dy', dy);
+      li.appendChild(particle);
+      particles.push(particle);
+    }
+
+    li.style.color = 'transparent';
+    li.style.background = 'transparent';
+    li.style.boxShadow = 'none';
+
+    setTimeout(() => li.remove(), 1200);
+  }
+</script>
 </body>
 </html>
