--- a/index.html
+++ b/index.html
@@ -1,172 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Animated Gift List</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-<style>
-  body, html {
-    margin:0; padding:0; overflow-x:hidden;
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(135deg, #fceabb, #f8b500);
-    height: 100%;
-  }
-
-  /* Background layers for parallax */
-  .bg-layer {
-    position: fixed; top:0; left:0; width:100%; height:100%;
-    background: url('https://images.unsplash.com/photo-1557683316-973673baf926?fit=crop&w=1200&q=80') center/cover no-repeat;
-    transform: translateY(0);
-    z-index:-2; opacity:0.2;
-    pointer-events:none;
-    transition: transform 0.1s linear;
-  }
-
-  .container {
-    position: relative;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 80px 30px;
-    background: rgba(255,255,255,0.95);
-    border-radius: 20px;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.2);
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    overflow: hidden;
-  }
-
-  h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: 3em;
-    text-align: center;
-    color:#d2691e;
-    animation: titleFloat 3s ease-in-out infinite alternate;
-  }
-
-  @keyframes titleFloat {
-    0% { transform: translateY(0);}
-    100% { transform: translateY(-15px);}
-  }
-
-  .input-area { display:flex; gap:10px; }
-  input {
-    flex:1;
-    padding: 15px 20px;
-    border-radius: 12px;
-    border:2px solid #d2691e;
-    font-size:1em;
-    outline:none;
-    transition: 0.3s all;
-  }
-  input:focus { border-color:#ff8c42; box-shadow: 0 0 10px rgba(255,140,66,0.3); }
-
-  button {
-    padding: 12px 25px;
-    background: linear-gradient(135deg, #d2691e, #ff8c42);
-    border:none;
-    border-radius: 12px;
-    color:#fff;
-    font-weight:600;
-    cursor:pointer;
-    transition: 0.3s all;
-  }
-  button:hover { transform: scale(1.05); box-shadow:0 8px 25px rgba(210,105,30,0.4); }
-
-  ul { list-style:none; display:flex; flex-direction:column; gap:20px; }
-  li {
-    background:#fff8f0;
-    padding: 18px 25px;
-    border-radius: 15px;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    font-size:1.1em;
-    cursor:pointer;
-    transform: translateX(-50px);
-    opacity:0;
-    transition: all 0.5s ease;
-  }
-  li.show { transform: translateX(0); opacity:1; }
-
-  li a { color:#d2691e; text-decoration:none; flex:1; transition:0.3s; }
-  li a:hover { color:#ff8c42; }
-
-  li button {
-    background:transparent;
-    border:none;
-    color:#d2691e;
-    font-weight:bold;
-    cursor:pointer;
-    transition:0.3s;
-  }
-  li button:hover { color:#ff8c42; transform: scale(1.2); }
-
-  /* Floating particles behind container */
-  .particle-bg { position:absolute; width:100%; height:100%; top:0; left:0; overflow:hidden; pointer-events:none; z-index:-1; }
-  .particle { position:absolute; width:6px; height:6px; border-radius:50%; background: rgba(210,105,30,0.6); animation: floatUp linear infinite; }
-  @keyframes floatUp { 0% { transform: translateY(100vh) scale(0.5); } 100% { transform: translateY(-50px) scale(1); } }
-
-</style>
+  <meta charset="UTF-8">
+  <title>Gift List – 3D Background</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    #bg { position: fixed; top:0; left:0; width:100%; height:100%; z-index: -1; }
+    .ui {
+      position: relative;
+      z-index: 1;
+      font-family: sans-serif;
+      padding: 50px;
+      max-width: 500px;
+      margin: auto;
+      background: rgba(255,255,255,0.9);
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    }
+    .ui h1 { text-align: center; color: #333; }
+    .ui input { width:70%; padding:10px; }
+    .ui button { padding:10px; }
+    .ui ul { list-style:none; padding:0; }
+    .ui li { margin:8px 0; display:flex; justify-content:space-between; }
+  </style>
 </head>
 <body>
-
-<div class="bg-layer"></div>
-<div class="particle-bg" id="particles"></div>
-
-<div class="container">
-  <h1>Gift List</h1>
-  <div class="input-area">
-    <input id="giftInput" placeholder="Gift Name | URL">
+  <canvas id="bg"></canvas>
+  <div class="ui">
+    <h1>Gift List</h1>
+    <input type="text" id="giftInput" placeholder="Gift name | URL">
     <button id="addBtn">Add</button>
+    <ul id="giftList"></ul>
   </div>
-  <ul id="giftList"></ul>
-</div>
 
-<script>
-  const input=document.getElementById('giftInput');
-  const addBtn=document.getElementById('addBtn');
-  const list=document.getElementById('giftList');
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r181/three.min.js"></script>
+  <script>
+    // === Three.js background setup ===
+    const canvas = document.getElementById('bg');
+    const renderer = new THREE.WebGLRenderer({canvas, antialias:true});
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.z = 5;
 
-  addBtn.addEventListener('click',addGift);
-  input.addEventListener('keypress',e=>{if(e.key==='Enter')addGift();});
+    // simple geometry: floating particles / points
+    const geometry = new THREE.BufferGeometry();
+    const count = 5000;
+    const positions = new Float32Array(count * 3);
+    for (let i=0; i<count; i++) {
+      positions[i*3 + 0] = (Math.random() - 0.5) * 20;
+      positions[i*3 + 1] = (Math.random() - 0.5) * 20;
+      positions[i*3 + 2] = (Math.random() - 0.5) * 20;
+    }
+    geometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+    const material = new THREE.PointsMaterial({ color: 0xff8c42, size: 0.1, transparent:true, opacity:0.6 });
+    const points = new THREE.Points(geometry, material);
+    scene.add(points);
 
-  function addGift(){
-    const val=input.value.trim();
-    if(!val) return;
-    const [name,url]=val.split('|').map(v=>v.trim());
-    if(!name) return;
+    function animate() {
+      requestAnimationFrame(animate);
+      points.rotation.y += 0.0005;
+      points.rotation.x += 0.0003;
+      renderer.render(scene, camera);
+    }
+    animate();
 
-    const li=document.createElement('li');
-    li.innerHTML=`<a href="${url||'#'}" target="_blank">${name}</a><button>&times;</button>`;
-    list.appendChild(li);
-    requestAnimationFrame(()=>li.classList.add('show'));
-
-    li.querySelector('button').addEventListener('click',()=>{
-      li.style.transform='translateX(50px)'; li.style.opacity='0';
-      setTimeout(()=>li.remove(),500);
+    window.addEventListener('resize', () => {
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
     });
 
-    input.value='';
-  }
+    // === Gift list logic ===
+    const input = document.getElementById('giftInput');
+    const addBtn = document.getElementById('addBtn');
+    const list = document.getElementById('giftList');
+    addBtn.onclick = addGift;
+    input.addEventListener('keypress', e => { if (e.key === 'Enter') addGift(); });
 
-  // Scroll-based parallax for background
-  window.addEventListener('scroll',()=> {
-    const scrollY = window.scrollY;
-    document.querySelector('.bg-layer').style.transform = `translateY(${scrollY*0.3}px)`;
-  });
-
-  // Generate floating particles
-  const particlesContainer=document.getElementById('particles');
-  for(let i=0;i<50;i++){
-    const p=document.createElement('div'); p.className='particle';
-    p.style.left=Math.random()*100+'%';
-    p.style.animationDuration=3+Math.random()*4+'s';
-    p.style.width=2+Math.random()*6+'px';
-    p.style.height=p.style.width;
-    particlesContainer.appendChild(p);
-  }
-
-</script>
+    function addGift(){
+      const val = input.value.trim();
+      if (!val) return;
+      const [name, url] = val.split('|').map(s=>s.trim());
+      const li = document.createElement('li');
+      li.innerHTML = `<a href="${url||'#'}" target="_blank">${name}</a> <button>&times;</button>`;
+      li.querySelector('button').onclick = () => li.remove();
+      list.appendChild(li);
+      input.value = '';
+    }
+  </script>
 </body>
 </html>
