--- a/index.html
+++ b/index.html
@@ -1,93 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Gift List – 3D Background</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    #bg { position: fixed; top:0; left:0; width:100%; height:100%; z-index: -1; }
-    .ui {
-      position: relative;
-      z-index: 1;
-      font-family: sans-serif;
-      padding: 50px;
-      max-width: 500px;
-      margin: auto;
-      background: rgba(255,255,255,0.9);
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-    }
-    .ui h1 { text-align: center; color: #333; }
-    .ui input { width:70%; padding:10px; }
-    .ui button { padding:10px; }
-    .ui ul { list-style:none; padding:0; }
-    .ui li { margin:8px 0; display:flex; justify-content:space-between; }
-  </style>
+<meta charset="UTF-8">
+<title>3D Fancy Gift List</title>
+<style>
+  body { margin: 0; overflow: hidden; font-family: sans-serif; }
+  #bg { position: fixed; top:0; left:0; width:100%; height:100%; z-index:-1; }
+  .container {
+    position: relative; z-index:1;
+    max-width: 600px; margin: 50px auto;
+    background: rgba(255,255,255,0.95); padding:40px; border-radius:16px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+  }
+  h1 { text-align:center; color:#d2691e; margin-bottom:20px; }
+  input { width:70%; padding:12px; border-radius:10px; border:2px solid #d2691e; margin-right:10px; }
+  button { padding:12px; border:none; border-radius:10px; background: linear-gradient(135deg,#d2691e,#ff8c42); color:white; cursor:pointer; }
+  ul { list-style:none; padding:0; margin-top:20px; }
+  li { margin:8px 0; display:flex; justify-content:space-between; align-items:center; padding:10px; background:#fff8f0; border-radius:12px; transition:0.3s; }
+  li:hover { transform:translateX(5px); box-shadow:0 5px 20px rgba(0,0,0,0.1); }
+  li a { text-decoration:none; color:#d2691e; flex:1; }
+  li a:hover { color:#ff8c42; }
+  li button { background:transparent; border:none; color:#d2691e; font-weight:bold; cursor:pointer; transition:0.2s; }
+  li button:hover { color:#ff8c42; transform:scale(1.2); }
+</style>
 </head>
 <body>
-  <canvas id="bg"></canvas>
-  <div class="ui">
-    <h1>Gift List</h1>
-    <input type="text" id="giftInput" placeholder="Gift name | URL">
+
+<canvas id="bg"></canvas>
+<div class="container">
+  <h1>Gift List</h1>
+  <div>
+    <input id="giftInput" placeholder="Gift Name | URL">
     <button id="addBtn">Add</button>
-    <ul id="giftList"></ul>
   </div>
+  <ul id="giftList"></ul>
+</div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r181/three.min.js"></script>
-  <script>
-    // === Three.js background setup ===
-    const canvas = document.getElementById('bg');
-    const renderer = new THREE.WebGLRenderer({canvas, antialias:true});
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.z = 5;
+<script src="https://cdn.jsdelivr.net/npm/three@0.181.0/build/three.min.js"></script>
+<script>
+  // === Three.js particle background inspired by examples ===
+  const canvas = document.getElementById('bg');
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
+  camera.position.z = 5;
 
-    // simple geometry: floating particles / points
-    const geometry = new THREE.BufferGeometry();
-    const count = 5000;
-    const positions = new Float32Array(count * 3);
-    for (let i=0; i<count; i++) {
-      positions[i*3 + 0] = (Math.random() - 0.5) * 20;
-      positions[i*3 + 1] = (Math.random() - 0.5) * 20;
-      positions[i*3 + 2] = (Math.random() - 0.5) * 20;
-    }
-    geometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
-    const material = new THREE.PointsMaterial({ color: 0xff8c42, size: 0.1, transparent:true, opacity:0.6 });
-    const points = new THREE.Points(geometry, material);
-    scene.add(points);
+  const renderer = new THREE.WebGLRenderer({canvas, antialias:true});
+  renderer.setSize(window.innerWidth, window.innerHeight);
 
-    function animate() {
-      requestAnimationFrame(animate);
-      points.rotation.y += 0.0005;
-      points.rotation.x += 0.0003;
-      renderer.render(scene, camera);
-    }
-    animate();
+  // Particle geometry
+  const particles = new THREE.BufferGeometry();
+  const count = 3000;
+  const positions = new Float32Array(count*3);
+  for(let i=0;i<count;i++){
+    positions[i*3] = (Math.random()-0.5)*20;
+    positions[i*3+1] = (Math.random()-0.5)*20;
+    positions[i*3+2] = (Math.random()-0.5)*20;
+  }
+  particles.setAttribute('position', new THREE.BufferAttribute(positions,3));
+  const material = new THREE.PointsMaterial({color:0xff8c42, size:0.05, opacity:0.6, transparent:true});
+  const points = new THREE.Points(particles, material);
+  scene.add(points);
 
-    window.addEventListener('resize', () => {
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-    });
+  function animate() {
+    requestAnimationFrame(animate);
+    points.rotation.y += 0.0005;
+    points.rotation.x += 0.0003;
+    renderer.render(scene, camera);
+  }
+  animate();
+  window.addEventListener('resize',()=>{
+    renderer.setSize(window.innerWidth,window.innerHeight);
+    camera.aspect = window.innerWidth/window.innerHeight;
+    camera.updateProjectionMatrix();
+  });
 
-    // === Gift list logic ===
-    const input = document.getElementById('giftInput');
-    const addBtn = document.getElementById('addBtn');
-    const list = document.getElementById('giftList');
-    addBtn.onclick = addGift;
-    input.addEventListener('keypress', e => { if (e.key === 'Enter') addGift(); });
+  // === Gift list logic ===
+  const input=document.getElementById('giftInput');
+  const addBtn=document.getElementById('addBtn');
+  const list=document.getElementById('giftList');
 
-    function addGift(){
-      const val = input.value.trim();
-      if (!val) return;
-      const [name, url] = val.split('|').map(s=>s.trim());
-      const li = document.createElement('li');
-      li.innerHTML = `<a href="${url||'#'}" target="_blank">${name}</a> <button>&times;</button>`;
-      li.querySelector('button').onclick = () => li.remove();
-      list.appendChild(li);
-      input.value = '';
-    }
-  </script>
+  addBtn.onclick=addGift;
+  input.addEventListener('keypress', e=>{if(e.key==='Enter') addGift();});
+
+  function addGift(){
+    const val=input.value.trim();
+    if(!val) return;
+    const [name,url]=val.split('|').map(s=>s.trim());
+    const li=document.createElement('li');
+    li.innerHTML=`<a href="${url||'#'}" target="_blank">${name}</a> <button>&times;</button>`;
+    li.querySelector('button').onclick=()=>li.remove();
+    list.appendChild(li);
+    input.value='';
+  }
+</script>
 </body>
 </html>
