--- a/index.html
+++ b/index.html
@@ -2,47 +2,27 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Gift List – Fancy 3D</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<title>Fancy Gift List</title>
 <style>
-  html, body { margin:0; padding:0; overflow:hidden; font-family:'Roboto', sans-serif; }
-  canvas { display:block; position:fixed; top:0; left:0; width:100%; height:100%; z-index:-2; }
-  
-  /* Overlay container */
-  .container {
-    position: relative; z-index:1;
-    max-width:600px; margin:80px auto; padding:40px;
-    background: rgba(255,255,255,0.92); border-radius:20px;
-    box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-    backdrop-filter: blur(8px);
-  }
-  h1 {
-    font-family:'Playfair Display', serif; font-size:3em;
-    color:#d2691e; text-align:center; margin-bottom:30px;
-    animation: floatTitle 3s ease-in-out infinite alternate;
-  }
-  @keyframes floatTitle { 0% { transform:translateY(0); } 100% { transform:translateY(-15px); } }
-
-  .input-area { display:flex; gap:10px; margin-bottom:20px; }
-  input { flex:1; padding:12px 15px; border-radius:12px; border:2px solid #d2691e; outline:none; transition:0.3s; }
-  input:focus { border-color:#ff8c42; box-shadow:0 0 15px rgba(255,140,66,0.3); }
-  button { padding:12px 20px; border:none; border-radius:12px; background:linear-gradient(135deg,#d2691e,#ff8c42); color:white; font-weight:600; cursor:pointer; transition:0.3s; }
-  button:hover { transform:scale(1.05); box-shadow:0 10px 30px rgba(210,105,30,0.5); }
-
-  ul { list-style:none; padding:0; margin:0; }
-  li {
-    display:flex; justify-content:space-between; align-items:center;
-    margin:10px 0; padding:12px 18px; border-radius:15px;
-    background:linear-gradient(135deg,#fff8f0,#ffe4c4);
-    font-size:1.1em; cursor:pointer; transition:0.4s;
-    box-shadow:0 5px 15px rgba(0,0,0,0.1);
-  }
-  li:hover { transform:translateX(8px) scale(1.03); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
-  li a { flex:1; text-decoration:none; color:#d2691e; transition:0.3s; }
-  li a:hover { color:#ff8c42; }
-  li button { background:transparent; border:none; color:#d2691e; font-weight:bold; cursor:pointer; transition:0.2s; }
-  li button:hover { color:#ff8c42; transform:scale(1.2); }
-
+html,body{margin:0;padding:0;overflow:hidden;font-family:sans-serif;}
+canvas{display:block;position:fixed;top:0;left:0;width:100%;height:100%;z-index:-2;}
+.container{
+  position:relative; z-index:1; max-width:600px; margin:80px auto; padding:40px;
+  background: rgba(255,255,255,0.95); border-radius:20px;
+  box-shadow:0 20px 60px rgba(0,0,0,0.3); backdrop-filter:blur(8px);
+}
+h1{text-align:center;margin-bottom:30px;}
+.input-area{display:flex; gap:10px; margin-bottom:20px;}
+input{flex:1;padding:12px 15px; border-radius:12px; border:2px solid #d2691e; outline:none;}
+input:focus{border-color:#ff8c42;box-shadow:0 0 15px rgba(255,140,66,0.3);}
+button{padding:12px 20px;border:none;border-radius:12px;background:linear-gradient(135deg,#d2691e,#ff8c42);color:white;font-weight:600;cursor:pointer;}
+ul{list-style:none;padding:0;margin:0;}
+li{display:flex;justify-content:space-between;align-items:center;margin:10px 0;padding:12px 18px;border-radius:15px;background:linear-gradient(135deg,#fff8f0,#ffe4c4);transition:0.4s;box-shadow:0 5px 15px rgba(0,0,0,0.1);}
+li:hover{transform:translateX(8px) scale(1.03);box-shadow:0 8px 25px rgba(0,0,0,0.2);}
+li a{flex:1;text-decoration:none;color:#d2691e;}
+li a:hover{color:#ff8c42;}
+li button{background:transparent;border:none;color:#d2691e;font-weight:bold;cursor:pointer;transition:0.2s;}
+li button:hover{color:#ff8c42;transform:scale(1.2);}
 </style>
 </head>
 <body>
@@ -59,83 +39,77 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.181.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.181.0/examples/js/controls/OrbitControls.js"></script>
 
 <script>
-  // === Three.js scene ===
-  const canvas = document.getElementById('bg');
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
-  camera.position.z = 10;
+const canvas=document.getElementById('bg');
+const scene=new THREE.Scene();
+const camera=new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,1000);
+camera.position.z=15;
+const renderer=new THREE.WebGLRenderer({canvas,antialias:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
+renderer.setClearColor(0x0a0a0a); // dark background
 
-  const renderer = new THREE.WebGLRenderer({canvas, antialias:true});
-  renderer.setSize(window.innerWidth, window.innerHeight);
+// particles
+const particlesGeo=new THREE.BufferGeometry();
+const count=4000;
+const positions=new Float32Array(count*3);
+for(let i=0;i<count;i++){
+  positions[i*3]=(Math.random()-0.5)*30;
+  positions[i*3+1]=(Math.random()-0.5)*30;
+  positions[i*3+2]=(Math.random()-0.5)*30;
+}
+particlesGeo.setAttribute('position',new THREE.BufferAttribute(positions,3));
+const particlesMat=new THREE.PointsMaterial({color:0xff8c42,size:0.12,transparent:true,opacity:0.7});
+const particles=new THREE.Points(particlesGeo,particlesMat);
+scene.add(particles);
 
-  // Floating particle geometry
-  const particlesGeo = new THREE.BufferGeometry();
-  const count = 4000;
-  const positions = new Float32Array(count*3);
-  for(let i=0;i<count;i++){
-    positions[i*3] = (Math.random()-0.5)*25;
-    positions[i*3+1] = (Math.random()-0.5)*25;
-    positions[i*3+2] = (Math.random()-0.5)*25;
-  }
-  particlesGeo.setAttribute('position', new THREE.BufferAttribute(positions,3));
-  const material = new THREE.PointsMaterial({color:0xff8c42,size:0.08,transparent:true,opacity:0.6});
-  const points = new THREE.Points(particlesGeo,material);
-  scene.add(points);
+// floating cubes
+const cubeGeo=new THREE.BoxGeometry(0.7,0.7,0.7);
+const cubeMat=new THREE.MeshStandardMaterial({color:0xff8c42,transparent:true,opacity:0.5});
+const cubes=[];
+for(let i=0;i<30;i++){
+  const cube=new THREE.Mesh(cubeGeo,cubeMat);
+  cube.position.set((Math.random()-0.5)*25,(Math.random()-0.5)*25,(Math.random()-0.5)*25);
+  cube.rotationSpeed=Math.random()*0.01+0.003;
+  cubes.push(cube);
+  scene.add(cube);
+}
 
-  // Optional: floating cubes for extra 3D depth
-  const cubeGeo = new THREE.BoxGeometry(0.5,0.5,0.5);
-  const cubeMat = new THREE.MeshStandardMaterial({color:0xff8c42, transparent:true, opacity:0.5});
-  const cubes = [];
-  for(let i=0;i<30;i++){
-    const cube = new THREE.Mesh(cubeGeo,cubeMat);
-    cube.position.set((Math.random()-0.5)*20, (Math.random()-0.5)*20, (Math.random()-0.5)*20);
-    cube.rotationSpeed = Math.random()*0.01 + 0.005;
-    cubes.push(cube); scene.add(cube);
-  }
+// lights
+const ambientLight=new THREE.AmbientLight(0xffffff,0.7); scene.add(ambientLight);
+const pointLight=new THREE.PointLight(0xffffff,0.8); pointLight.position.set(10,10,10); scene.add(pointLight);
 
-  // Lights
-  const ambientLight = new THREE.AmbientLight(0xffffff,0.7);
-  scene.add(ambientLight);
-  const pointLight = new THREE.PointLight(0xffffff,0.8);
-  pointLight.position.set(10,10,10);
-  scene.add(pointLight);
+function animate(){
+  requestAnimationFrame(animate);
+  particles.rotation.y+=0.0007; particles.rotation.x+=0.0005;
+  cubes.forEach(c=>{c.rotation.x+=c.rotationSpeed;c.rotation.y+=c.rotationSpeed;});
+  renderer.render(scene,camera);
+}
+animate();
 
-  function animate(){
-    requestAnimationFrame(animate);
-    points.rotation.y += 0.0007;
-    points.rotation.x += 0.0005;
-    cubes.forEach(c => { c.rotation.x += c.rotationSpeed; c.rotation.y += c.rotationSpeed; });
-    renderer.render(scene,camera);
-  }
-  animate();
+window.addEventListener('resize',()=>{
+  renderer.setSize(window.innerWidth,window.innerHeight);
+  camera.aspect=window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+});
 
-  window.addEventListener('resize',()=>{
-    renderer.setSize(window.innerWidth,window.innerHeight);
-    camera.aspect = window.innerWidth/window.innerHeight;
-    camera.updateProjectionMatrix();
-  });
+// gift list logic
+const input=document.getElementById('giftInput');
+const addBtn=document.getElementById('addBtn');
+const list=document.getElementById('giftList');
+addBtn.onclick=addGift;
+input.addEventListener('keypress',e=>{if(e.key==='Enter')addGift();});
 
-  // === Gift list logic ===
-  const input = document.getElementById('giftInput');
-  const addBtn = document.getElementById('addBtn');
-  const list = document.getElementById('giftList');
-
-  addBtn.onclick = addGift;
-  input.addEventListener('keypress', e=>{if(e.key==='Enter') addGift();});
-
-  function addGift(){
-    const val = input.value.trim();
-    if(!val) return;
-    const [name,url] = val.split('|').map(s=>s.trim());
-    const li = document.createElement('li');
-    li.innerHTML = `<a href="${url||'#'}" target="_blank">${name}</a> <button>&times;</button>`;
-    li.querySelector('button').onclick = ()=>li.remove();
-    list.appendChild(li);
-    input.value = '';
-  }
+function addGift(){
+  const val=input.value.trim();
+  if(!val) return;
+  const [name,url]=val.split('|').map(s=>s.trim());
+  const li=document.createElement('li');
+  li.innerHTML=`<a href="${url||'#'}" target="_blank">${name}</a> <button>&times;</button>`;
+  li.querySelector('button').onclick=()=>li.remove();
+  list.appendChild(li);
+  input.value='';
+}
 </script>
 </body>
 </html>
