--- a/index.html
+++ b/index.html
@@ -156,51 +156,50 @@ button:hover { transform:scale(1.05); }
 
 /* === GIFT LIST ITEMS === */
 .gift-item {
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    background: rgba(255,255,255,0.09);
-    padding:14px;
-    border-radius:14px;
-    margin-bottom:12px;
-    backdrop-filter:blur(10px);
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-start; /* align top so text stacks */
+  background: rgba(255,255,255,0.08);
+  padding:12px;
+  border-radius:12px;
+  margin-bottom:10px;
+  backdrop-filter:blur(10px);
 }
 
 .gift-text {
-    display:flex;
-    flex-direction: column;
-    max-width:75%;
+  display:flex;
+  flex-direction: column; /* stack name + URL vertically */
+  max-width:75%;
 }
 
 .gift-name {
-    font-weight:600;
-    font-size:17px;
-    margin-bottom:4px;
-    color:white;
-    word-break: break-word;
+  font-weight:600;
+  color:white;
+  font-size:16px;
+  margin-bottom:4px;
+  word-break: break-word;
 }
 
 .gift-url {
-    font-size:13px;
-    color:#aad3ff;
-    text-decoration:none;
-    word-break: break-all;
-    text-align:left;
-    opacity:0.8;
+  font-size:13px;
+  color:#aad3ff;
+  text-decoration:none;
+  word-break: break-all;
+  display:block;
 }
 
 .gift-url:hover {
-    opacity:1;
-    text-decoration:underline;
+  text-decoration:underline;
 }
 
 .remove-btn {
-    background: rgba(255,80,80,0.3);
-    border: none;
-    padding: 8px 12px;
-    border-radius: 8px;
-    color: white;
-    cursor: pointer;
+  margin-left:10px;
+  background: rgba(255,80,80,0.3);
+  border:none;
+  border-radius:8px;
+  padding:6px 10px;
+  color:white;
+  cursor:pointer;
 }
 
 /* Scrollbar */
